# aimx

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yaml
src/: config.rs  crosshair.rs  main.rs  overlay.rs  panel.rs  platform.rs
src/overlay/: app.rs  mod.rs
src/panel/: app.rs  ipc.rs  mod.rs  style.rs  tray.rs
