[package]
name = "aimx"
version = "0.1.0"
edition = "2024"  # Using the latest Rust edition for 2026

[dependencies]
# The primary GUI framework
eframe = { version = "0.33", features = ["persistence", "glow"] }

raw-window-handle = "0.6"

# Configuration and profile saving
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }
tray-icon = "0.19"

# Future-proofing for Steam Integration
steamworks = { version = "0.12", optional = true }
image = { version = "0.25.9", default-features = false, features = ["png"] }
crossbeam-channel = "0.5.15"

[features]
default = []
steam = ["dep:steamworks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'   # Keeps the binary small and prevents stack unwinding overhead

[build-dependencies]
winresource = "0.1.30"
